@@ -1,6 +1,24 @@
 <p>
   <b>Hospede:</b>
   <%=h @conta.hospede.nome %>
-</p>
 
-<%= link_to 'Voltar', contas_path %>
+<table>
+  <tr> 
+    <th>Nome</th>
+    <th colspan="">Opções</th>
+  </tr>
+
+<% par_impar = 0;
+  for aluguel in @alugueis 
+	  par_impar = 1 - par_impar %>
+  <tr class="listLine<%= par_impar %>">
+    <td><%=h aluguel.servico.nome %></td>
+    <td width="5%"><%= link_to 'Exibir', aluguel %></td>
+    <td width="5%"><%= link_to 'Remover', aluguel, :confirm => 'Você tem certeza?', :method => :delete %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'Voltar', :controller => "apartamentos", :action => "show", :id => @conta.apartamento.id %>
